--- a/local/templates/lab/template_styles.css
+++ b/local/templates/lab/template_styles.css
@@ -2521,6 +2521,8 @@ textarea.inputtext:focus + .lines {
     right: 0;
     bottom: 0;
     left: 0;
+    width: 100%;
+    height: 230px;
 }
 .preloader_it{
     position: absolute;
